                    - These tags have been removed :
                        - {% ctype_for_model %}
                        - {% ctype_for_swappable %}
                        - {% ctype_counted_instances_label %}
                    - The filter "|ctype_can_be_mass_imported" has been removed.
                    - The filter "|ctype_verbose_name" must take a "count" argument.
            - The method 'creme_core.tests.base._CremeTestCase.assertRelationCount' has been removed.
            - In Javascript :
                - The method 'Array.copy()' has been removed.
                - In 'creme.ajax' :
                    - The class 'URL' has been removed.
                    - These functions have been removed : 'parseUrl()', 'param()' & 'decodeSearchData()'.
                - In 'creme.utils' :
                    - The function 'confirmSubmit()' has been removed.
                    - The option "waitingOverlay" of 'ajaxQuery()' has been removed.
                    - The functions 'showPageLoadOverlay()', 'hidePageLoadOverlay()' & 'loading()' have been removed.
                    - In 'JSON', these methods have been removed :
                      'encode()', 'decode()', 'isJSON()', 'clean()', 'readScriptText()'.
            - App :
                * Persons :
                    - The module 'workflow' has been removed.
                * Assistants :
                    - The constant 'MIN_HOUR_4_TODO_REMINDER' has been removed.
                * Activities :
                    - These constants have been removed:
                      'NARROW', 'FLOATING_TIME', 'FLOATING', 'SETTING_*'.
                    - The forms 'CalendarForm' & 'CalendarConfigForm' have been removed.
                * Billing :
                    - In 'models.Base' (& child classes), these methods have been removed :
                      'build()' '_build_object()', '_build_relations()', '_build_properties()'.
                    - The module 'registry' has been removed.